corrected spacing

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 8%;
+    height: 8vh;
 }
 
 .title {
@@ -81,6 +81,6 @@ body {
     color: white;
     position: fixed;
     margin: 0;
-    top: calc(4% - 2.5vh);
-    left: calc((4% - 2.5vh) / 2);
+    top: calc(4vh - 2.5vh);
+    left: calc((4vw - 2.5vw) / 2);
 }
